# bitcoin-scanner

./: Cargo.toml  README.md
.github/workflows/: check.yml
docs/: db.md
examples/: 3am.rs  count_inscriptions.rs  mean_weight.rs  ord.rs  parallel_mapping.rs  simple_mapping.rs  util.rs
src/: app.rs  bitcode.rs  blockscan.rs  db.rs  lib.rs  main.rs  scanner.rs
