[package]
name = "bitcoin-scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = { version = "0.30.0" }
bitflags = "2.0.1"
byteorder = "1.4.3"
more-asserts = "0.3.1"
rusty-leveldb = "1.0.6"

[dev-dependencies]
directories = "4.0.1"
hex = "0.4.3"
